demo-hybrid-app/k8s/overlays/production/frontend-route-patch.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
spec:
  to:
    name: frontend-prod
